[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lsmtree"
version = "1.0.0"
description = "LSM-tree"
license = "MIT"
authors = ["Sergei Bogdanov <syubogdanov@outlook.com>"]
maintainers = ["Sergei Bogdanov <syubogdanov@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/syubogdanov/lsmtree"
repository = "https://github.com/syubogdanov/lsmtree"
documentation = "https://github.com/syubogdanov/lsmtree/tree/main/docs/"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "~3.11"
sortedcontainers = "~2.4"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
mypy = "~1.10"
ruff = "~0.3"
sortedcontainers-stubs = "~2.4"

[tool.mypy]
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "S301"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 8
